通过mvp模式，构建数据库，并能插入数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".FraActivity">
         </activity>
+        <activity android:name=".MySqliteActivity">
+        </activity>
         <receiver android:name=".broadcastReciver.BootCompleteReceive">
             <intent-filter>
                 <action
