--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -37,12 +39,14 @@
         <activity android:name=".FraActivity">
         </activity>
         <activity android:name=".MySqliteActivity">
+        </activity>
+        <activity android:name=".contentProvider.contactActivity">
+        </activity>
+        <activity android:name=".notification.NotificationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".contentProvider.ContactActivity">
         </activity>
         <receiver android:name=".broadcastReciver.BootCompleteReceive">
             <intent-filter>
